# mimimomo

./: .gitignore  Dockerfile  README.md  chat_cli.py  client.py  commands.py  config.py  conftest.py  interceptor_example.py  pyproject.toml  redactor.py  requirements.txt  session.py  ui.py
src/cliai/: __init__.py  __main__.py  chat_cli.py  client.py  config.py  network.py  redactor.py  session.py  ui.py
tests/: test_chat_cli.py  test_client.py  test_commands.py  test_config.py  test_network.py  test_redactor.py  test_session.py
