[project]
name = "cliai"
version = "0.1.0"
description = "CLI AI chat for any OpenAI-compatible endpoint"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "openai",
    "prompt_toolkit",
    "pyyaml",
    "platformdirs",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
