[project]
name = "cliai"
version = "0.1.0"
description = "CLI AI chat for any OpenAI-compatible endpoint"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "openai",
    "prompt_toolkit",
    "pyyaml",
    "platformdirs",
]

[project.optional-dependencies]
ner = [
    "presidio-analyzer",
    "presidio-anonymizer",
    "spacy",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
cliai = "cliai.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
